доработка  swagger.yaml
