# routes/v1/products.js
@@ -16,30 +16,6 @@ const storage = multer.diskStorage({
   
   const upload = multer({ storage });
   
-  /**
-   * @swagger
-   * /api/v1/products/upload:
-   *   post:
-   *     summary: Загружает изображение для продукта.
-   *     requestBody:
-   *       required: true
-   *       content:
-   *         multipart/form-data:
-   *           schema:
-   *             type: object
-   *             properties:
-   *               image:
-   *                 type: string
-   *                 format: binary
-   *     responses:
-   *       200:
-   *         description: Успешная загрузка изображения.
-   *         content:
-   *           text/plain:
-   *             example: 'Image uploaded: /uploads/1617625858661-image1.jpg'
-   *       400:
-   *         description: Ошибка загрузки изображения.
-   */
   router.post('/v1/upload', upload.single('image'), (req, res) => {
     if (req.file) {
       const imagePath = `/uploads/${Date.now()}-${req.file.originalname}`;
@@ -49,18 +25,6 @@ const storage = multer.diskStorage({
     }
   });
 
-/**
- * @swagger
- * /api/v1/products:
- *   get:
- *     summary: Возвращает список всех продуктов.
- *     responses:
- *       200:
- *         description: Успешный ответ
- *         content:
- *           application/json:
- *             example: [...]
- */
 router.get('/', async (req, res) => {
   try {
     const products = await Product.find();
@@ -71,25 +35,7 @@ router.get('/', async (req, res) => {
 });
 
 // middleware для получения информации о товаре 
-/**
- * @swagger
- * /api/v1/products/{productId}:
- *   get:
- *     summary: Возвращает информацию о конкретном продукте.
- *     parameters:
- *       - in: path
- *         name: productId
- *         required: true
- *         description: ID продукта
- *         schema:
- *           type: string
- *     responses:
- *       200:
- *         description: Успешный ответ
- *         content:
- *           application/json:
- *             example: {...}
- */
+
 router.get('/:productId', async (req, res) => {
   const productId = req.params.productId;
   try {
@@ -103,25 +49,6 @@ router.get('/:productId', async (req, res) => {
   }
 });
 
-/**
- * @swagger
- * /api/v1/products:
- *   post:
- *     summary: Добавляет новый продукт.
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           example: {...новый продукт...}
- *     responses:
- *       201:
- *         description: Успешно создано
- *         content:
- *           application/json:
- *             example: {...новый продукт...}
- *       500:
- *         description: Ошибка сервера
- */
 router.post('/', async (req, res) => {
   const newProduct = req.body;
   try {
@@ -132,34 +59,6 @@ router.post('/', async (req, res) => {
   }
 });
 
-/**
- * @swagger
- * /api/v1/products/{productId}:
- *   put:
- *     summary: Обновляет информацию о продукте.
- *     parameters:
- *       - in: path
- *         name: productId
- *         required: true
- *         description: ID продукта
- *         schema:
- *           type: string
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           example: {...обновленные данные...}
- *     responses:
- *       200:
- *         description: Успешно обновлено
- *         content:
- *           application/json:
- *             example: {...обновленный продукт...}
- *       404:
- *         description: Продукт не найден
- *       500:
- *         description: Ошибка сервера
- */
 router.put('/v1/products/:productId', async (req, res) => {
   const productId = req.params.productId;
   const updatedProduct = req.body;
@@ -174,26 +73,6 @@ router.put('/v1/products/:productId', async (req, res) => {
   }
 });
 
-/**
- * @swagger
- * /api/v1/products/{productId}:
- *   delete:
- *     summary: Удаляет продукт.
- *     parameters:
- *       - in: path
- *         name: productId
- *         required: true
- *         description: ID продукта
- *         schema:
- *           type: string
- *     responses:
- *       200:
- *         description: Продукт успешно удален
- *       404:
- *         description: Продукт не найден
- *       500:
- *         description: Ошибка сервера
- */
 router.delete('/v1/products/:productId', async (req, res) => {
   const productId = req.params.productId;
   try {
